Improve async job tracking